Kubernetes/project/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: project
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:     
      imagePullSecrets:
      - name: regcred1
      containers:
      - name: frontend
        image: kareem32/projects:frontend
        ports:
          - containerPort: 80
