Kubernetes/project/service-db-compat.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: project
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
